Create Team Section with Individual Bio Pages

--- a/index.html
+++ b/index.html
@@ -518,53 +518,65 @@ https://templatemo.com/tm-590-topic-listing
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="text-white mb-4">How does it work?</h1>
+                            <h2 class="text-white mb-5">Meet Our Team</h2>
                         </div>
 
-                        <div class="col-lg-10 col-12 mx-auto">
-                            <div class="timeline-container">
-                                <ul class="vertical-scrollable-timeline" id="vertical-scrollable-timeline">
-                                    <div class="list-progress">
-                                        <div class="inner"></div>
-                                    </div>
+                        <div class="col-lg-6 col-md-6 col-12 mb-4">
+                            <div class="team-member-card" data-member="sarah-johnson">
+                                <div class="team-member-image-wrapper">
+                                    <img src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" class="team-member-image" alt="Sarah Johnson">
+                                </div>
+                                <div class="team-member-info">
+                                    <h4 class="text-white mb-2">Sarah Johnson</h4>
+                                    <h6 class="text-secondary mb-3">Lead UX Designer</h6>
+                                    <p class="text-white">Specializes in user experience design and interface optimization. 8+ years creating intuitive digital experiences.</p>
+                                </div>
+                            </div>
+                        </div>
 
-                                    <li>
-                                        <h4 class="text-white mb-3">Search your favourite topic</h4>
+                        <div class="col-lg-6 col-md-6 col-12 mb-4">
+                            <div class="team-member-card" data-member="michael-chen">
+                                <div class="team-member-image-wrapper">
+                                    <img src="https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" class="team-member-image" alt="Michael Chen">
+                                </div>
+                                <div class="team-member-info">
+                                    <h4 class="text-white mb-2">Michael Chen</h4>
+                                    <h6 class="text-secondary mb-3">Full Stack Developer</h6>
+                                    <p class="text-white">Expert in modern web technologies and scalable architecture. Passionate about clean code and performance optimization.</p>
+                                </div>
+                            </div>
+                        </div>
 
-                                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, cumque magnam? Sequi, cupiditate quibusdam alias illum sed esse ad dignissimos libero sunt, quisquam numquam aliquam? Voluptas, accusamus omnis?</p>
+                        <div class="col-lg-6 col-md-6 col-12 mb-4">
+                            <div class="team-member-card" data-member="emily-rodriguez">
+                                <div class="team-member-image-wrapper">
+                                    <img src="https://images.pexels.com/photos/1239291/pexels-photo-1239291.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" class="team-member-image" alt="Emily Rodriguez">
+                                </div>
+                                <div class="team-member-info">
+                                    <h4 class="text-white mb-2">Emily Rodriguez</h4>
+                                    <h6 class="text-secondary mb-3">Digital Marketing Strategist</h6>
+                                    <p class="text-white">Data-driven marketing professional with expertise in SEO, content strategy, and conversion optimization.</p>
+                                </div>
+                            </div>
+                        </div>
 
-                                        <div class="icon-holder">
-                                          <i class="bi-search"></i>
-                                        </div>
-                                    </li>
-                                    
-                                    <li>
-                                        <h4 class="text-white mb-3">Bookmark &amp; Keep it for yourself</h4>
-
-                                        <p class="text-white">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint animi necessitatibus aperiam repudiandae nam omnis est vel quo, nihil repellat quia velit error modi earum similique odit labore. Doloremque, repudiandae?</p>
-
-                                        <div class="icon-holder">
-                                          <i class="bi-bookmark"></i>
-                                        </div>
-                                    </li>
-
-                                    <li>
-                                        <h4 class="text-white mb-3">Read &amp; Enjoy</h4>
-
-                                        <p class="text-white">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi vero quisquam, rem assumenda similique voluptas distinctio, iste est hic eveniet debitis ut ducimus beatae id? Quam culpa deleniti officiis autem?</p>
-
-                                        <div class="icon-holder">
-                                          <i class="bi-book"></i>
-                                        </div>
-                                    </li>
-                                </ul>
+                        <div class="col-lg-6 col-md-6 col-12 mb-4">
+                            <div class="team-member-card" data-member="david-thompson">
+                                <div class="team-member-image-wrapper">
+                                    <img src="https://images.pexels.com/photos/1222271/pexels-photo-1222271.jpeg?auto=compress&cs=tinysrgb&w=300&h=300&fit=crop" class="team-member-image" alt="David Thompson">
+                                </div>
+                                <div class="team-member-info">
+                                    <h4 class="text-white mb-2">David Thompson</h4>
+                                    <h6 class="text-secondary mb-3">Project Manager</h6>
+                                    <p class="text-white">Agile methodology expert ensuring smooth project delivery. Specializes in team coordination and client communication.</p>
+                                </div>
                             </div>
                         </div>
 
                         <div class="col-12 text-center mt-5">
                             <p class="text-white">
-                                Want to learn more?
-                                <a href="#" class="btn custom-btn custom-border-btn ms-3">Check out Youtube</a>
+                                Want to join our team?
+                                <a href="#section_5" class="btn custom-btn custom-border-btn ms-3 click-scroll">Get in Touch</a>
                             </p>
                         </div>
                     </div>
@@ -781,6 +793,7 @@ https://templatemo.com/tm-590-topic-listing
         <script src="js/jquery.sticky.js"></script>
         <script src="js/click-scroll.js"></script>
         <script src="js/custom.js"></script>
+        <script src="js/team.js"></script>
 
     </body>
 </html>
