--- a/team-detail.html
+++ b/team-detail.html
@@ -234,12 +234,19 @@
             </div>
         </footer>
 
+        <!-- LIVE CHAT BUTTON -->
+        <a href="#" class="live-chat-button" id="liveChatBtn">
+            <span class="chat-tooltip">Chat with us!</span>
+            <i class="bi-chat-dots-fill"></i>
+        </a>
+
         <!-- JAVASCRIPT FILES -->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/jquery.sticky.js"></script>
         <script src="js/custom.js"></script>
         <script src="js/team-detail.js"></script>
+        <script src="js/live-chat.js"></script>
 
     </body>
 </html>
