--- a/index.html
+++ b/index.html
@@ -831,6 +831,12 @@ https://templatemo.com/tm-590-topic-listing
         </footer>
 
 
+        <!-- LIVE CHAT BUTTON -->
+        <a href="#" class="live-chat-button" id="liveChatBtn">
+            <span class="chat-tooltip">Chat with us!</span>
+            <i class="bi-chat-dots-fill"></i>
+        </a>
+
         <!-- JAVASCRIPT FILES -->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
@@ -839,6 +845,7 @@ https://templatemo.com/tm-590-topic-listing
         <script src="js/custom.js"></script>
         <script src="js/team.js"></script>
         <script src="js/search.js"></script>
+        <script src="js/live-chat.js"></script>
 
     </body>
 </html>
