--- a/topics-detail.html
+++ b/topics-detail.html
@@ -257,11 +257,18 @@ https://templatemo.com/tm-590-topic-listing
             </div>
         </footer>
 
+        <!-- LIVE CHAT BUTTON -->
+        <a href="#" class="live-chat-button" id="liveChatBtn">
+            <span class="chat-tooltip">Chat with us!</span>
+            <i class="bi-chat-dots-fill"></i>
+        </a>
+
         <!-- JAVASCRIPT FILES -->
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/jquery.sticky.js"></script>
         <script src="js/custom.js"></script>
+        <script src="js/live-chat.js"></script>
 
     </body>
 </html>
